# PETPAL

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: conf.py  requirements.txt
petpal/cli/: cli_graphical_analysis.py  cli_parametric_images.py  cli_preproc.py  cli_stats.py  cli_tac_fitting.py
petpal/input_function/: pca_guided_idif.py
petpal/kinetic_modeling/: fit_tac_with_rtms.py  graphical_analysis.py  parametric_images.py  rtm_analysis.py  tac_fitting.py  tcms_as_convolutions.py
petpal/meta/: __init__.py  auto_cli.py  label_maps.py
petpal/pipelines/: kinetic_modeling_steps.py  pipeline_context.py  pipelines.py  preproc_steps.py  steps_base.py  steps_containers.py
petpal/preproc/: brain_mask_pet.py  image_operations_4d.py  motion_corr.py  regional_tac_extraction.py  segmentation_tools.py  symmetric_geometric_transfer_matrix.py
petpal/utils/: __init__.py  dimension.py  scan_timing.py  stats.py  time_activity_curve.py  timeseries_from_img_list.py  useful_functions.py
